--- a/Tanks/index.html
+++ b/Tanks/index.html
@@ -5,21 +5,42 @@
     <title></title>
     <link href="Static/Css/boardStyle.css" rel="stylesheet" />
     <link href="Static/Css/controlStyle.css" rel="stylesheet" />
-
 </head>
 <body>
-
     <div id="mainDiv">
+        <div class="col-4"></div>
+        <div id="splashScreen" class="col-4">
 
+            <p2>Welcome to tanks!</p2>
+            Select number of players:
+            <div id="selectNPlayers">
+                <select id="numberOfPlayers">
+                    <option value="2" class="nOption">2</option>
+                    <option value="3" class="nOption">3</option>
+                    <option value="4" class="nOption">4</option>
+                    <option value="5" class="nOption">5</option>
+                    <option value="6" class="nOption">6</option>
+                </select>
+                <br />
+                <button id="namesChosen">OK</button>
+            </div>
+            <div id="playerNames">
+
+            </div>
+            <div id="sendNamesButton" class="invisible">
+                <button class='sendNames'>Start game!</button>
+            </div>
+            <div id="sendNamesMessage">
+            </div>
+        </div>
     </div>
     <div id="lifeTokens" class="lifeToken"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-    
+
     <script src="/Static/Js/main.js"></script>
     <script src="/Static/Js/board.js"></script>
     <script src="/Static/Js/controls.js"></script>
-    
 </body>
 </html>
